feat: add intranet dns zone apis & edns query & dynamic dns update
